k8s/tor-relay/tor-service.yml
apiVersion:  v1
kind: Service
metadata:
  name: tor-relay-svc
  namespace: tor-relay
spec:
  selector:
    app: tor-relay
  type: NodePort
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9001
